--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header ul li a:hover {
 }
 .banner {
     height: 60vh;
-    background-image: url('../img/bener.jpeg');
+    background-image: url('bener.jpeg');
     background-size: cover;
     position: relative;
     display: flex;
